--- a/index.html
+++ b/index.html
@@ -57,48 +57,45 @@
       </div>
 
 
-<!--
+
       <footer class="flex-rw">
                   <!--------  1st Rown   -------->
-<!--
+
                   <ul class="footer-list-top">
                     <li>
                       <h4 class="footer-list-header">About Us</h4></li>
                     <li><a href="about.html" class="generic-anchor footer-list-anchor" itemprop="significantLink">GET TO KNOW US</a></li>
-                    <li><a href="" class="generic-anchor footer-list-anchor" itemprop="significantLink">PROMOS</a></li>
+                    <li><a href="" class="generic-anchor footer-list-anchor" itemprop="significantLink">PORTFOLIO</a></li>
                     <li><a href="" class="generic-anchor footer-list-anchor" itemprop="significantLink">EVENTS</a></li>
                   </ul>
--->                  
+                 
 
                   <!--------  2nd Rown   -------->
-<!--
+
                   <ul class="footer-list-top">
-                    <li id='help'>
-                      <h4 class="footer-list-header">Please Help Me</h4></li>
-                    <li><a href="" class="generic-anchor footer-list-anchor" itemprop="significantLink">CONTACT</a></li>
-                    <li><a href="" class="generic-anchor footer-list-anchor" itemprop="significantLink">FAQ</a></li>
-                    <li><a href="" class="generic-anchor footer-list-anchor" itemprop="significantLink">LOCATION?</a></li>
-                    <li><a href="" class="generic-anchor footer-list-anchor" itemprop="significantLink">NEW USER?</a></li>
+                      <li><h4 class="footer-list-header">Please Help Me</h4></li>
+                    <li><a href="" class="footer-list-anchor" itemprop="significantLink">CONTACT</a></li>
+                    <li><a href="" class="footer-list-anchor" itemprop="significantLink">FAQ</a></li>
+                    <li><a href="" class="footer-list-anchor" itemprop="significantLink">LOCATION?</a></li>
+                    <li><a href="" class="footer-list-anchor" itemprop="significantLink">NEW USER?</a></li>
                   </ul>
--->
-<!--
+
                   <section class="footer-social-section flex-rw">
                       <span class="footer-social-overlap footer-social-connect">
                       CONNECT <span class="footer-social-small">with</span> US
                       </span>
                       <span class="footer-social-overlap footer-social-icons-wrapper">
-                      <a href="" class="generic-anchor" target="_blank" title="Facebook" itemprop="significantLink"><i class="fa fa-facebook"></i></a>
-                      <a href="" class="generic-anchor" target="_blank" title="Twitter" itemprop="significantLink"><i class="fa fa-twitter"></i></a>
-                      <a href="" class="generic-anchor" target="_blank" title="Instagram" itemprop="significantLink"><i class="fa fa-instagram"></i></a>
-                      <a href="" class="generic-anchor" target="_blank" title="Youtube" itemprop="significantLink"><i class="fa fa-youtube"></i></a>
-                      <a href="" class="generic-anchor" target="_blank" title="Google Plus" itemprop="significantLink"><i class="fa fa-google-plus"></i></a>
+                      <a href="" class="sociallogo" target="_blank" title="Facebook" itemprop="significantLink"><i class="fa fa-facebook"></i></a>
+                      <a href="" class="sociallogo" target="_blank" title="Twitter" itemprop="significantLink"><i class="fa fa-twitter"></i></a>
+                      <a href="" class="sociallogo" target="_blank" title="Instagram" itemprop="significantLink"><i class="fa fa-instagram"></i></a>
+                      <a href="" class="sociallogo" target="_blank" title="Youtube" itemprop="significantLink"><i class="fa fa-youtube"></i></a>
+                      <a href="" class="sociallogo" target="_blank" title="Google Plus" itemprop="significantLink"><i class="fa fa-google-plus"></i></a>
                       </span>
                   </section>
                   <section class="footer-bottom-section flex-rw">
                 <div class="footer-bottom-wrapper">   
                 <i class="fa fa-copyright" role="copyright">
--->
-<!--             
+            
                 </i> 2015 STI it 101 <address class="footer-address" role="company address">Novaliches</address><span class="footer-bottom-rights"> - All Rights Reserved - </span>
                     </div>
                     <div class="footer-bottom-wrapper">
@@ -106,21 +103,6 @@
                       </div>
                   </section>
       </footer>
--->
-
-<!--   2nd Footer   -->
-<footer>
-            <div class="copyright">
-              <p>IT 101 wwooohhhhh</p>
-            </div>
-            <div class="social">
-              <a href="#" class="support">Contact Us</a>
-              <a href="#" class="face">f</a>
-              <a href="#" class="tweet">t</a>
-              <a href="#" class="linked">in</a>
-            </div>
-          </footer>
-
 
       <script type="text/javascript">
 
