--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                   <!--------  2nd Rown   -------->
 
-                  <ul class="footer-list-top">
+                  <ul class="footer-list-top sec">
                       <li><h4 class="footer-list-header">Please Help Me</h4></li>
                     <li><a href="" class="footer-list-anchor" itemprop="significantLink">CONTACT</a></li>
                     <li><a href="" class="footer-list-anchor" itemprop="significantLink">FAQ</a></li>
@@ -80,10 +80,7 @@
                     <li><a href="" class="footer-list-anchor" itemprop="significantLink">NEW USER?</a></li>
                   </ul>
 
-                  <section class="footer-social-section flex-rw">
-                      <span class="footer-social-overlap footer-social-connect">
-                      CONNECT <span class="footer-social-small">with</span> US
-                      </span>
+                  <div class="footericonposition">
                       <span class="footer-social-overlap footer-social-icons-wrapper">
                       <a href="" class="sociallogo" target="_blank" title="Facebook" itemprop="significantLink"><i class="fa fa-facebook"></i></a>
                       <a href="" class="sociallogo" target="_blank" title="Twitter" itemprop="significantLink"><i class="fa fa-twitter"></i></a>
@@ -91,17 +88,9 @@
                       <a href="" class="sociallogo" target="_blank" title="Youtube" itemprop="significantLink"><i class="fa fa-youtube"></i></a>
                       <a href="" class="sociallogo" target="_blank" title="Google Plus" itemprop="significantLink"><i class="fa fa-google-plus"></i></a>
                       </span>
+                    <div>
                   </section>
-                  <section class="footer-bottom-section flex-rw">
-                <div class="footer-bottom-wrapper">   
-                <i class="fa fa-copyright" role="copyright">
-            
-                </i> 2015 STI it 101 <address class="footer-address" role="company address">Novaliches</address><span class="footer-bottom-rights"> - All Rights Reserved - </span>
-                    </div>
-                    <div class="footer-bottom-wrapper">
-                    <a href="" class="generic-anchor" rel="nofollow">Terms</a> | <a href="" class="generic-anchor" rel="nofollow">Privacy</a>
-                      </div>
-                  </section>
+ 
       </footer>
 
       <script type="text/javascript">
