--- a/pages/signin.html
+++ b/pages/signin.html
@@ -12,18 +12,23 @@
 
 	<body>
 
+
+
 <div class="form">
 
 	<form action="https://fonts.google.com/">
+		<div class="close">
+				<button class="closebtn"> X </button>
+		</div>
 		<h1>Log In</h1>	
 
 <input type="text" name="username" placeholder="Username">
 <input type="password" name="pwd" placeholder="Password">
 
-<button>Login</button>
+<button class="loginbtn">Login</button>
 <div class="">
-<a href="">Forgot Username?</a>
-<a href="">Forgot Username?</a>
+<a href="" class="fam fo">Forgot Username?</a>
+<a href="" class="fam fa">Forgot Password?</a>
 </div>
 	</form>
 </div>
