--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
                                     <li><a href="#">Portfolio</a></li>
                                     <li><a href="#">Contact</a></li>
                                     <li><a href="">Sign Up</a></li>
-                                    <li><a href="">Log In</a></li>
+                                    <li><a href="./pages/signin/signin.html">Log In</a></li>
                               </ul>
                         </div>
 
