may effectna for team

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <title>Photography</title>
-<!--------CSS parts------->    
+<!- CSS parts ->    
       <link rel="stylesheet" href="./css/style.css">
       <link rel="stylesheet" href="./css/footer.css">
-<!-------FONTS------->
+<!- FONTS ->
       <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">  
-<!--------Mga pang paganda---------->
+<!- Mga pang paganda  ->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
       <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 </head>
-<body>
+<body> 
       <div class="wrapper">
             <header>
 
@@ -37,7 +37,7 @@
                                     <li><a href="about.html">About</a></li>
                                     <li><a href="#">Portfolio</a></li>
                                     <li><a href="#">Contact</a></li>
-                                    <li><a href="">Sign Up</a></li>
+                                    <li><a href="./pages/signup/signup.html">Sign Up</a></li>
                                     <li><a href="./pages/signin/signin.html">Log In</a></li>
                               </ul>
                         </div>
@@ -65,6 +65,7 @@
                     <li>
                       <h4 class="footer-list-header">About Us</h4></li>
                     <li><a href="about.html" class="generic-anchor footer-list-anchor" itemprop="significantLink">GET TO KNOW US</a></li>
+                    <li><a href="./pages/theteam/team.html" class="generic-anchor footer-list-anchor" itemprop="significantLink">OUR TEAM</a></li>
                     <li><a href="" class="generic-anchor footer-list-anchor" itemprop="significantLink">PORTFOLIO</a></li>
                     <li><a href="" class="generic-anchor footer-list-anchor" itemprop="significantLink">EVENTS</a></li>
                   </ul>
