--- a/about.html
+++ b/about.html
@@ -4,22 +4,21 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <title>Photography</title>
-<!--------CSS parts------->    
+      <title>About</title>
+<!- CSS parts ->    
       <link rel="stylesheet" href="./css/about.css">
-<!-------FONTS------->
+<!- FONTS ->
       <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">  
-<!--------Mga pang paganda---------->
+<!- Mga pang paganda ->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
       <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 </head>
-<body>
-      <div class="wrapper">
-            <header>
-
+   
+<header>
+<div class="wrapper">
                   <nav>
 
                         <div class="menu-icon">
@@ -43,8 +42,8 @@
 
                   </nav>
 
-            </header>
-
+</header>
+<body>
             <div class="content">
 
                   <p>
@@ -54,6 +53,10 @@
                   <p>
                         PhotographyPhotographyPhotographyPhotographyPhotographyPhotographyPhotographyPhotography
                   </p>
+                  <section>
+
+                        
+                  </section>
             </div>
       </div>
 
