--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
       <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 </head>
-<body> 
-      <div class="wrapper">
-            <header>
 
+<header>
+   <div class="wrapper">
                   <nav>
 
                         <div class="menu-icon">
@@ -44,7 +43,8 @@
 
                   </nav>
 
-            </header>
+</header>
+<body> 
 
             <div class="content">
                   <p>
@@ -76,9 +76,9 @@
                   <ul class="footer-list-top sec">
                       <li><h4 class="footer-list-header">Please Help Me</h4></li>
                     <li><a href="" class="footer-list-anchor" itemprop="significantLink">CONTACT</a></li>
-                    <li><a href="" class="footer-list-anchor" itemprop="significantLink">FAQ</a></li>
+                    <li><a href="faq.html" class="footer-list-anchor" itemprop="significantLink">FAQ</a></li>
                     <li><a href="" class="footer-list-anchor" itemprop="significantLink">LOCATION?</a></li>
-                    <li><a href="" class="footer-list-anchor" itemprop="significantLink">NEW USER?</a></li>
+                    <li><a href="./pages/signup/signup.html" class="footer-list-anchor" itemprop="significantLink">NEW USER?</a></li>
                   </ul>
 
                   <div class="footericonposition">
