--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 
             <div class="content">
                   <p>
-                        PhotographyPhotographyPhotographyPhotographyPhotographyPhotographyPhotographyPhotography
+                        This page supports all Filipino aspiring photographers to upgrade their passion and interest in Photography 
                   </p>
                   <p>
-                        PhotographyPhotographyPhotographyPhotographyPhotographyPhotographyPhotographyPhotography
+                        This page is completely free. Please Support us by following our page below.
                   </p>
             </div>
       </div>
