--- a/pages/signin/signin.html
+++ b/pages/signin/signin.html
@@ -16,7 +16,7 @@
 
 <div class="form">
 
-	<form action="https://fonts.google.com/">
+	<form action="https://groupindex.github.io/">
 		<div class="close">
 				<button class="closebtn"> X </button>
 		</div>
