--- a/faq.html
+++ b/faq.html
@@ -29,8 +29,8 @@
 
                     <div class="menu">
                           <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="about.html">About</a></li>
+                                <li><a href="https://groupindex.github.io/">Home</a></li>
+                                <li><a href="https://groupindex.github.io/about.html">About</a></li>
                                 <li><a href="#">Portfolio</a></li>
                                 <li><a href="#">Contact</a></li>
                                 <li><a href="./pages/signup/signup.html">Sign Up</a></li>
