--- a/faq.html
+++ b/faq.html
@@ -29,7 +29,7 @@
 
                     <div class="menu">
                           <ul>
-                                <li><a href="https://groupindex.github.io/">Home</a></li>
+                                <li><a href="../index.html">Home</a></li>
                                 <li><a href="https://groupindex.github.io/about.html">About</a></li>
                                 <li><a href="#">Portfolio</a></li>
                                 <li><a href="#">Contact</a></li>
@@ -43,7 +43,7 @@
 </header>
 <body>
 <section>
-    <p>1. Is this website free? <br>Answer: Yes</p>
+    <p> nbsp; nbsp; nbsp;1. Is this website free? <br> nbsp; nbsp; nbsp;Answer: Yes</p>
 </section>
     
 </body>
