--- a/faq.html
+++ b/faq.html
@@ -43,7 +43,7 @@
 </header>
 <body>
 <section>
-    <p> nbsp; nbsp; nbsp;1. Is this website free? <br> nbsp; nbsp; nbsp;Answer: Yes</p>
+    <p> &nbsp; &nbsp; &nbsp;1. Is this website free? <br> &nbsp; &nbsp; &nbsp; Answer: Yes</p>
 </section>
     
 </body>
