--- a/faq.html
+++ b/faq.html
@@ -43,7 +43,15 @@
 </header>
 <body>
 <section>
-    <p> &nbsp; &nbsp; &nbsp;1. Is this website free? <br> &nbsp; &nbsp; &nbsp; Answer: Yes</p>
+   <table>
+                <caption><h1>FREQUENTLY ASK QUESTION</h1></caption>
+                <tr>
+                    <th width="150">Logo</th>
+                    <th width="200">Name</th>
+                    <th width="1000">Description & Links</th>
+                </tr>
+                <tr>
+</table>
 </section>
     
 </body>
