--- a/faq.html
+++ b/faq.html
@@ -44,7 +44,7 @@
 <body>
 <section>
  
-                <caption><h1>FREQUENTLY ASK QUESTION</h1></caption>
+                <caption>FREQUENTLY ASK QUESTION</caption>
       
                
 
