--- a/faq.html
+++ b/faq.html
@@ -44,7 +44,8 @@
 <body>
 <section>
  
-                <caption>FREQUENTLY ASK QUESTION</caption>
+    <caption><h1><u>FREQUENTLY ASK QUESTION</u></h1></caption>
+        <br><br>1. Is this website free? <br> Answer: Yes. It is.
       
                
 
