--- a/faq.html
+++ b/faq.html
@@ -43,11 +43,11 @@
 </header>
 <body>
 <section>
-    <center>
+  
  
-    <caption><h1><u>FREQUENTLY ASK QUESTION</u></h1></caption>
-        <br><br>1. Is this website free? <br> Answer: Yes. It is.
-      </center>
+   &nbsp; &nbsp; &nbsp; <caption><h1><u>FREQUENTLY ASK QUESTION</u></h1></caption>
+   &nbsp; &nbsp; &nbsp;     <br><br>1. Is this website free? <br> Answer: Yes. It is.
+     
                
 
 </section>
