--- a/faq.html
+++ b/faq.html
@@ -45,8 +45,8 @@
 <section>
   
  
-    <caption><h1><u> &nbsp; &nbsp; &nbsp;FREQUENTLY ASK QUESTION</u></h1></caption>
-        <br><br> &nbsp; &nbsp; &nbsp;1. Is this website free? <br> Answer: Yes. It is.
+    <caption><h1><u>FREQUENTLY ASK QUESTION</u></h1></caption>
+        <br><br> &nbsp; &nbsp; &nbsp;1. Is this website free? <br> &nbsp; &nbsp; &nbsp;Answer: Yes. It is.
      
                
 
