--- a/faq.html
+++ b/faq.html
@@ -44,8 +44,11 @@
 <body>
 <section>
   
- 
-    <caption><h1><u>FREQUENTLY ASK QUESTION</u></h1></caption>
+<table>
+    <caption>
+            FREQUENTLY ASK QUESTION
+    </caption>
+</table>
         <br><br> &nbsp; &nbsp; &nbsp;1. Is this website free? <br> &nbsp; &nbsp; &nbsp;Answer: Yes. It is.
      
                
