--- a/faq.html
+++ b/faq.html
@@ -44,12 +44,10 @@
 <body>
 <section>
   
-<table>
-    <caption>
-            FREQUENTLY ASK QUESTION
-    </caption>
-</table>
-        <br><br> &nbsp; &nbsp; &nbsp;1. Is this website free? <br> &nbsp; &nbsp; &nbsp;Answer: Yes. It is.
+ 
+    <caption><h1><br><br>&nbsp; &nbsp; &nbsp;<u>FREQUENTLY ASK QUESTION</u></h1></caption>
+        <br><br> &nbsp; &nbsp; &nbsp;1. Is this website free? <br> &nbsp; &nbsp; &nbsp;<b>Answer: Yes. It is.</b>
+        <br><br> &nbsp; &nbsp; &nbsp;2. Can we download the photos shared by others? <br> &nbsp; &nbsp; &nbsp;<b>Answer: Depends on the users settings.</b>
      
                
 
