--- a/faq.html
+++ b/faq.html
@@ -45,7 +45,7 @@
 <section>
   
 <table>
-    <caption><FREQUENTLY ASK QUESTION</caption>
+    <caption>FREQUENTLY ASK QUESTION</caption>
 </table>
         <br><br> &nbsp; &nbsp; &nbsp;1. Is this website free? <br> &nbsp; &nbsp; &nbsp;<b>Answer: Yes. It is.</b>
         <br><br> &nbsp; &nbsp; &nbsp;2. Can we download the photos shared by others? <br> &nbsp; &nbsp; &nbsp;<b>Answer: Depends on the users settings.</b>
