--- a/faq.html
+++ b/faq.html
@@ -49,7 +49,7 @@
 </table>
 <div class="question">
  1. Is this website free?
-<b>Answer: Yes. It is.</b>
+<b>Answer: Yes. It is.</b> <br><br><hr>
  2. Can we download the photos shared by others?
 <b>Answer: Depends on the users settings.
 </div>
