--- a/faq.html
+++ b/faq.html
@@ -49,9 +49,9 @@
 </table>
 <div class="question">
  1. Is this website free?
-<b>Answer: Yes. It is.</b> <br><br><hr>
+<b><br>Answer: Yes. It is.</b><br><br><hr>
  2. Can we download the photos shared by others?
-<b>Answer: Depends on the users settings.
+<b><br>Answer: Depends on the users settings.
 </div>
 </section>
     
