--- a/faq.html
+++ b/faq.html
@@ -48,10 +48,12 @@
     <caption>FREQUENTLY ASK QUESTION</caption>
 </table>
 <div class="question">
+<tr>
  1. Is this website free?
-<b><br>Answer: Yes. It is.</b><br><br><hr>
+<b><br>Answer: Yes. It is.</b><br><br>
  2. Can we download the photos shared by others?
 <b><br>Answer: Depends on the users settings.
+</tr>
 </div>
 </section>
     
