--- a/faq.html
+++ b/faq.html
@@ -46,7 +46,9 @@
   
 <table>
     <caption>FREQUENTLY ASK QUESTION</caption>
-</table>
+table, th, td {
+    border: 1px solid black;
+}
 <div class="question">
 <tr>
  1. Is this website free?
@@ -54,6 +56,7 @@
  2. Can we download the photos shared by others?
 <b><br>Answer: Depends on the users settings.
 </tr>
+</table>
 </div>
 </section>
     
