--- a/faq.html
+++ b/faq.html
@@ -46,17 +46,15 @@
   
 <table>
     <caption>FREQUENTLY ASK QUESTION</caption>
-table, th, td {
-    border: 1px solid black;
-}
-<div class="question">
-<tr>
- 1. Is this website free?
-<b><br>Answer: Yes. It is.</b><br><br>
- 2. Can we download the photos shared by others?
-<b><br>Answer: Depends on the users settings.
-</tr>
 </table>
+<div class="question">
+
+&nbsp; &nbsp; 1. Is this website free?
+<b><br>&nbsp; &nbsp;Answer: Yes. It is.</b><br><br>
+&nbsp; &nbsp; 2. Can we download the photos shared by others?
+<b><br>&nbsp; &nbsp; Answer: Depends on the users settings.
+
+
 </div>
 </section>
     
