--- a/faq.html
+++ b/faq.html
@@ -53,6 +53,11 @@
 <b><br>&nbsp; &nbsp;Answer: Yes. It is.</b><br><br>
 &nbsp; &nbsp; 2. Can we download the photos shared by others?
 <b><br>&nbsp; &nbsp; Answer: Depends on the users settings.
+&nbsp; &nbsp; 1. Are we allowed to upload videos?
+<b><br>&nbsp; &nbsp;Answer: No.</b><br><br>
+&nbsp; &nbsp; 2. Can I upload the photos that is not mine (stolen from other sites) ?
+<b><br>&nbsp; &nbsp; Answer: No. Use license for the request.
+
 
 
 </div>
