--- a/faq.html
+++ b/faq.html
@@ -52,7 +52,7 @@
 &nbsp; &nbsp; 1. Is this website free?
 <b><br>&nbsp; &nbsp;Answer: Yes. It is.</b><br><br>
 &nbsp; &nbsp; 2. Can we download the photos shared by others?
-<b><br>&nbsp; &nbsp; Answer: Depends on the users settings.</b><br><br?
+<b><br>&nbsp; &nbsp; Answer: Depends on the users settings.</b><br><br>
 &nbsp; &nbsp; 3. Are we allowed to upload videos?<br>
 <b><br>&nbsp; &nbsp;Answer: Yes (Up to 2GB per file only)</b><br><br>
 &nbsp; &nbsp; 4. Can I upload the photos that is not mine (stolen from other sites) ?
