--- a/faq.html
+++ b/faq.html
@@ -53,7 +53,7 @@
 <b><br>&nbsp; &nbsp;Answer: Yes. It is.</b><br><br>
 &nbsp; &nbsp; 2. Can we download the photos shared by others?
 <b><br>&nbsp; &nbsp; Answer: Depends on the users settings.</b><br><br>
-&nbsp; &nbsp; 3. Are we allowed to upload videos?<br>
+&nbsp; &nbsp; 3. Are we allowed to upload videos?
 <b><br>&nbsp; &nbsp;Answer: Yes (Up to 2GB per file only)</b><br><br>
 &nbsp; &nbsp; 4. Can I upload the photos that is not mine (stolen from other sites) ?
 <b><br>&nbsp; &nbsp; Answer: No. Use license for the request.</b>
