--- a/faq.html
+++ b/faq.html
@@ -49,13 +49,13 @@
 </table>
 <div class="question">
 
-&nbsp; &nbsp; 1. Is this website free?
+&nbsp; &nbsp; 1.<u> Is this website free?</u>
 <b><br>&nbsp; &nbsp; Answer: Yes. It is.</b><br><br>
-&nbsp; &nbsp; 2. Can we download the photos shared by others?
+&nbsp; &nbsp; 2.<u> Can we download the photos shared by others?</u>
 <b><br>&nbsp; &nbsp; Answer: Depends on the users settings.</b><br><br>
-&nbsp; &nbsp; 3. Are we allowed to upload videos?
+&nbsp; &nbsp; 3.<u> Are we allowed to upload videos?</u>
 <b><br>&nbsp; &nbsp; Answer: Yes (Up to 2GB per file only)</b><br><br>
-&nbsp; &nbsp; 4. Can I upload the photos that is not mine (stolen from other sites) ?
+&nbsp; &nbsp; 4.<u> Can I upload the photos that is not mine (stolen from other sites) ?</u>
 <b><br>&nbsp; &nbsp; Answer: No. Use license for the request.</b>
 
 
