--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
             <div class="content">
 
                   <p>
-                      <img src="./img/pic.png" class="bounceInLeft">
+                      <img src="./img/pic.png" class="animate-opacity">
                         PhotographyPhotographyPhotographyPhotographyPhotographyPhotographyPhotographyPhotography
                   </p>
                   <p>
