--- a/pages/signin/signin.html
+++ b/pages/signin/signin.html
@@ -28,7 +28,7 @@
 <button class="loginbtn">Login</button>
 <div class="">
 <a href="" class="fam fo"> &nbsp; &nbsp; &nbsp; &nbsp; Forgot Username?</a>
-<a href="" class="fam fa">Forgot Password?</a>
+<a href="" class="fam fa"> &nbsp; &nbsp; &nbsp; &nbsp; Forgot Password?</a>
 </div>
 	</form>
 </div>
