--- a/pages/signin/signin.html
+++ b/pages/signin/signin.html
@@ -27,7 +27,7 @@
 
 <button class="loginbtn">Login</button>
 <div class="">
-&nbsp; &nbsp; &nbsp; &nbsp; <a href="" class="fam fa">  Forgot Password?</a>
+                                       <a href="" class="fam fa">Forgot Password?</a>
 </div>
 	</form>
 </div>
