--- a/pages/signin/signin.html
+++ b/pages/signin/signin.html
@@ -26,9 +26,10 @@
 <input type="password" name="pwd" placeholder="Password">
 
 <button class="loginbtn">Login</button>
-<div class="">
-                                       <a href="" class="fam fa">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Forgot Password?</a>
-</div>
+    <div class="">
+		<a href="" class="letsgo fo">Forgot Password?</a> 
+		<a href="" class="letsgo fa">Forgot Username</a> 
+	</div>
 	</form>
 </div>
 
