--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   <ul class="footer-list-top sec">
                       <li><h4 class="footer-list-header">Please Help Me</h4></li>
                     <li><a href="" class="footer-list-anchor" itemprop="significantLink">CONTACT</a></li>
-                    <li><a href="faq.html" class="footer-list-anchor" itemprop="significantLink">FAQ</a></li>
+                    <li><a href="./pages/faq/index.html" class="footer-list-anchor" itemprop="significantLink">FAQ</a></li>
                     <li><a href="" class="footer-list-anchor" itemprop="significantLink">LOCATION?</a></li>
                     <li><a href="./pages/signup/signup.html" class="footer-list-anchor" itemprop="significantLink">NEW USER?</a></li>
                   </ul>
