--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                                     <li><a href="#">About</a></li>
                                     <li><a href="#">Portfolio</a></li>
                                     <li><a href="#">Contact</a></li>
-                                    <li><a href="">Sign Up</a></li>
+                                    <li><a href="./pages/signup/signup.html">Sign Up</a></li>
                                     <li><a href="./pages/signin/signin.html">Log In</a></li>
                               </ul>
                         </div>
