--- a/faq.html
+++ b/faq.html
@@ -11,7 +11,7 @@
       <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
       <link rel='stylesheet' href='https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css'>
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="./pages/faq/css/style.css">
 
   
 </head>
@@ -30,12 +30,12 @@
 
                     <div class="menu">
                           <ul>
-                                <li><a href="/index.html">Home</a></li>
-                                <li><a href="/about.html">About</a></li>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about.html">About</a></li>
                                 <li><a href="" >Portfolio</a></li>
                                 <li><a href="#" >Contact</a></li>
-                                <li><a href="../signup/signup.html">Sign Up</a></li>
-                                <li><a href="../signin/signin.html">Log In</a></li>
+                                <li><a href="./pages/signup/signup.html">Sign Up</a></li>
+                                <li><a href="./pages/signin/signin.html">Log In</a></li>
                           </ul>
                     </div>
 
@@ -87,7 +87,7 @@
 
 <script src='https://code.jquery.com/jquery-3.2.1.min.js'></script>
 
-    <script  src="js/index.js"></script>
+    <script  src="./pages/faq/js/index.js"></script>
 
 
 
