--- a/faq.html
+++ b/faq.html
@@ -53,31 +53,31 @@
     <div class="accordion-item">
       <a>Is this site free?</a>
       <div class="content">
-        <p>YES. This is non-profitable site. This website aims to give user... chuchu</p>
+        <p>YES. This is non-profitable site.</p>
       </div>
     </div>
     <div class="accordion-item">
-      <a>2nd</a>
+      <a>Do I need to sign up first to use this website?</a>
       <div class="content">
-        <p>ULOL.</p>
+        <p>Yes. Some contents are not accessible if you don't have an account</p>
       </div>
     </div>
     <div class="accordion-item">
-      <a>How do I upload pictures</a>
+      <a>Can I download videos/pictures that uploaded by other users?</a>
       <div class="content">
-        <p>First you shoul signup and chuchu...</p>
+        <p>It depends on their own settings.</p>
       </div>
     </div>
     <div class="accordion-item">
-      <a>Can I download pictures in this site?</a>
+      <a>Can I purchase for extension of my storage space?</a>
       <div class="content">
-        <p>Yes, all of the pictures that all of the people posted can be downloaded</p>
+        <p>Not for now. We are currently working for it.</p>
       </div>
     </div>
     <div class="accordion-item">
-      <a>What will I do if I dont remember my account?</a>
+      <a>Is there any tips, tricks, tutorials in this site that can help us in our dream?</a>
       <div class="content">
-        <p>VOVOO!!!!... bat di mona alam... tanga-tanga</p>
+        <p>Yes. Please check our Social Media sites for more info.</p>
       </div>
     </div>
   </div>
