--- a/faq.html
+++ b/faq.html
@@ -69,7 +69,7 @@
       </div>
     </div>
     <div class="accordion-item">
-      <a>Can I purchase for extension of my storage space?</a>
+      <a>I don't have more space in my account? Can I extend more space?</a>
       <div class="content">
         <p>Not for now. We are currently working for it.</p>
       </div>
