--- a/pages/signup/signup.html
+++ b/pages/signup/signup.html
@@ -17,7 +17,7 @@
         
     <form>
             <h1>Signup</h1>
-        <input type="text" value="First Name" required>
+        <input type="text" value="First Name" placeholder="Middle Name" required>
         <input type="text" placeholder="Middle Name" required>
         <input type="text" placeholder="Last Name" required>
         <input type="email" placeholder="Email" required>
