--- a/pages/signup/signup.html
+++ b/pages/signup/signup.html
@@ -22,6 +22,7 @@
         <input type="text" placeholder="Last Name" required>
         <input type="email" placeholder="Email" required>
         <input type="password" placeholder="Password" required>
+        <input type="password" placeholder="Confirm Password" required>
 
         <button class="bu-bo">
             Signup
