--- a/pages/signup/signup.html
+++ b/pages/signup/signup.html
@@ -16,7 +16,7 @@
 <div class="mainform"> 
         
     <form>
-            <h1>Signup</h1>
+            <h1>SIGNUP</h1>
         <input type="text" placeholder="First Name" required>
         <input type="text" placeholder="Middle Name" required>
         <input type="text" placeholder="Last Name" required>
@@ -26,9 +26,6 @@
 
         <button class="bu-bo">
             Signup
-        </button>
-        <button class="bu-ba" onClick="../pages/signin/signin.html">
-            No account?
         </button>
     </form>
 </div>
