--- a/pages/theteam/team.html
+++ b/pages/theteam/team.html
@@ -10,8 +10,8 @@
     </head>
     <body>
         <div id="box1">
-            <h1>This is The Team NOOBBzzkkxxx</h1>
-            <p>The Manager Dapat may pic dinqwq</p>
+            <h1>ZACKERY ALLINE FAJARDO</h1>
+            <p>"Lead Programmer"</p>
         </div>
         <div id="box2">
             <h1>Wala malagay ehh</h1>
