--- a/pages/theteam/team.html
+++ b/pages/theteam/team.html
@@ -12,6 +12,7 @@
         <div id="box1">
             <h1>ZACKERY ALLINE FAJARDO</h1>
             <p>"Lead Programmer"</p>
+            <img soruce="ZACK.jph" border="5" width="100" height="200">
         </div>
         <div id="box2">
             <h1>Wala malagay ehh</h1>
