--- a/pages/theteam/team.html
+++ b/pages/theteam/team.html
@@ -12,7 +12,7 @@
         <div id="box1">
             <h1>ZACKERY ALLINE FAJARDO</h1>
             <p>"Lead Programmer"</p>
-            <img soruce="ZACK.jpg" border="4">
+            <img soruce="ZACK.jpg" height="400" width="150">
         </div>
         <div id="box2">
             <h1>Wala malagay ehh</h1>
