--- a/pages/signin/signin.html
+++ b/pages/signin/signin.html
@@ -20,15 +20,15 @@
 		<div class="close">
 				<button class="closebtn"> X </button>
 		</div>
-		<h1>Log In</h1>	
+		<h1>LOG IN</h1>	
 
 <input type="text" name="username" placeholder="Username">
 <input type="password" name="pwd" placeholder="Password">
 
 <button class="loginbtn">Login</button>
     <div class="">
-		<a href="" class="letsgo fo">Forgot Password?</a> 
-		<a href="" class="letsgo fa">Forgot Username</a> 
+		&nbsp; &nbsp; <a href="" class="letsgo fo">Forgot Password?</a> 
+		
 	</div>
 	</form>
 </div>
