--- a/pages/signin/signin.html
+++ b/pages/signin/signin.html
@@ -27,7 +27,7 @@
 
 <button class="loginbtn">Login</button>
     <div class="">
-		&nbsp; &nbsp; <a href="" class="letsgo fo">Forgot Password?</a> 
+		 <a href="" class="letsgo fo">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Forgot Password?</a> 
 		
 	</div>
 	</form>
