--- a/pages/theteam/team.html
+++ b/pages/theteam/team.html
@@ -12,22 +12,26 @@
         <div id="box1">
             <h1>ZACKERY ALLINE FAJARDO</h1>
             <p>"Lead Programmer"</p>
-            <img soruce="/img/ZACK.jpg">
+            <img src="./img/mem.jpg" class="mem1">
+            <div class="info">
+			<p>VOVO</p>
+			</div>
         </div>
         <div id="box2">
-            <h1>Wala malagay ehh</h1>
-            <p>Heyooo siya ang pinkagwapo sa lahat</p>
+            <h1>RALPH PEREZ</h1>
+            <div class="info">
+			</div>
         </div>
         <div id="box3">
-            <h1>ITo pa putek</h1>
+            <h1>JANELLE</h1>
             <p></p>
         </div>
         <div id="box4">
-            <h1>ohhh... ito pa nakakauta</h1>
+            <h1>KYLE ALCANTARA</h1>
             <p>BENNGGGG</p>
         </div>
         <div id="box5">
-            <h1>Pwede magpakamatay??</h1>
+            <h1>KINJAME DOCDOC</h1>
             <p>BENGGGG</p>
         </div>
     </body>
